Uploaded image for project: 'Qt'
  1. Qt
  2. QTBUG-3032

QComboBox: Using the keyboard to select items does not work correctly

    XMLWordPrintable

Details

    • Bug
    • Resolution: Done
    • P2: Important
    • 5.3.0 Alpha
    • 4.4.3, 5.2.0 Beta1
    • Widgets: Itemviews
    • None
    • 3e549f5daa55464512ee2763558f3a7ffd45c545

    Description

      When having a QComboBox with items like OA, OB, OC [...] OO, OP, then using the keyboard to select the item OO does not work correctly.
      If the items starts with twice the same character, then these items starting with that character are cycled through instead of moving directly to the correct item.

      Typing OO in the following example will select OB.

      #include <QtGui>
      int main(int argc, char **argv)
      {
       QApplication app(argc, argv);
       QComboBox combo;
       QStringList list;
       list << "AA" << "BB" << "OA" << "OB" << "OO" << "OP" << "OR" << "PP";
       combo.addItems(list);
       combo.show();
       return app.exec();
      }
      

      Attachments

        For Gerrit Dashboard: QTBUG-3032
        # Subject Branch Project Status CR V

        Activity

          People

            mitch_curtis Mitch Curtis
            sanonymous Nokia Qt Support (Inactive)
            Votes:
            2 Vote for this issue
            Watchers:
            6 Start watching this issue

            Dates

              Created:
              Updated:
              Resolved:

              Gerrit Reviews

                There are no open Gerrit changes