QTBUG-3032: Fixed keyboard selection with multiple character strings.

Take longer search strings into account instead of just using the
first letter of the search string.

Task-number: QTBUG-3032